stl-test/Tests/coordinate/index/Negative/test1.cpp
//#error
#include <coordinate>
int main(void)
{
    std::index<-1> cord;
}
